--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "java.net.URLEncoder"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "#'user/exec-query"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "nil"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,13 +170,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |             :label |\n",
-      "|-----------+--------------------|\n",
-      "| S12000047 |               Fife |\n",
-      "| S12000017 |           Highland |\n",
-      "| S12000013 | Na h-Eileanan Siar |\n",
-      "| S12000030 |           Stirling |\n",
-      "| S12000028 |     South Ayrshire |\n"
+      "|     :code |              :label |\n",
+      "|-----------+---------------------|\n",
+      "| S12000045 | East Dunbartonshire |\n",
+      "| S12000028 |      South Ayrshire |\n",
+      "| S12000014 |             Falkirk |\n",
+      "| S12000035 |     Argyll and Bute |\n",
+      "| S12000048 |   Perth and Kinross |\n"
      ]
     },
     {
@@ -185,7 +185,7 @@
        "nil"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "nil"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,11 +270,11 @@
       "\n",
       "|     :code |            :label |\n",
       "|-----------+-------------------|\n",
-      "| S12000035 |   Argyll and Bute |\n",
-      "| S12000018 |        Inverclyde |\n",
-      "| S12000017 |          Highland |\n",
-      "| S12000040 |      West Lothian |\n",
-      "| S12000036 | City of Edinburgh |\n"
+      "| S12000021 |    North Ayrshire |\n",
+      "| S12000036 | City of Edinburgh |\n",
+      "| S12000036 | City of Edinburgh |\n",
+      "| S12000014 |           Falkirk |\n",
+      "| S12000041 |             Angus |\n"
      ]
     },
     {
@@ -283,7 +283,7 @@
        "nil"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "nil"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "nil"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -456,11 +456,11 @@
       "\n",
       "|     :code |            :label | :year | :population |\n",
       "|-----------+-------------------+-------+-------------|\n",
-      "| S12000026 |  Scottish Borders |  2009 |      113590 |\n",
-      "| S12000029 | South Lanarkshire |  2015 |      316230 |\n",
-      "| S12000027 |  Shetland Islands |  2003 |       21950 |\n",
-      "| S12000035 |   Argyll and Bute |  2017 |       86810 |\n",
-      "| S12000050 | North Lanarkshire |  2005 |      327140 |\n"
+      "| S12000041 |             Angus |  2009 |      114830 |\n",
+      "| S12000026 |  Scottish Borders |  2014 |      114040 |\n",
+      "| S12000036 | City of Edinburgh |  2013 |      487460 |\n",
+      "| S12000018 |        Inverclyde |  2001 |       84150 |\n",
+      "| S12000036 | City of Edinburgh |  2019 |      524930 |\n"
      ]
     },
     {
@@ -469,7 +469,7 @@
        "nil"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "nil"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -560,11 +560,11 @@
       "\n",
       "|     :code |            :label | :year | :population |\n",
       "|-----------+-------------------+-------+-------------|\n",
-      "| S12000011 | East Renfrewshire |  2011 |       90810 |\n",
-      "| S12000029 | South Lanarkshire |  2005 |      306850 |\n",
-      "| S12000036 | City of Edinburgh |  2010 |      469930 |\n",
-      "| S12000050 | North Lanarkshire |  2010 |      336280 |\n",
-      "| S12000028 |    South Ayrshire |  2005 |      112030 |\n"
+      "| S12000041 |             Angus |  2013 |      116290 |\n",
+      "| S12000011 | East Renfrewshire |  2001 |       89410 |\n",
+      "| S12000018 |        Inverclyde |  2002 |       83730 |\n",
+      "| S12000028 |    South Ayrshire |  2015 |      112400 |\n",
+      "| S12000005 |  Clackmannanshire |  2019 |       51540 |\n"
      ]
     },
     {
@@ -573,7 +573,7 @@
        "nil"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "nil"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "#'user/code->qid"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "nil"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,11 +754,11 @@
     "\n",
     "## 4. The usefulness of the uploaded dataset\n",
     "\n",
-    "The uploaded dataset can be pulled (dynamically _de-referenced_) into Wikipedia articles and other web pages. \n",
+    "The uploaded dataset can be pulled (_de-referenced_) into Wikipedia articles and other web pages. \n",
     "\n",
     "### 4.1. Embedding dataset values into Wikipedia articles\n",
     "\n",
-    "For example, I edited the Wikipedia article [Council areas of Scotland](https://simple.wikipedia.org/wiki/Council_areas_of_Scotland) to its main table, the new column \"_Number of people (latest estimate)_\" whose values are pulled (each time the page is rendered) directly from the data that we have uploaded into Wikidata.\n",
+    "As an example, I edited the Wikipedia article [Council areas of Scotland](https://simple.wikipedia.org/wiki/Council_areas_of_Scotland) to insert into its main table, the new column \"_Number of people (latest estimate)_\" whose values are pulled (each time the page is rendered) directly from the data that we have uploaded into Wikidata:\n",
     "\n",
     "![Screenshot of Wikipedia article](screenshot-wikipedia-council-areas-article.png)\n",
     "\n",
@@ -768,12 +768,13 @@
     "\n",
     "### 4.3. Concerns, next steps, alternative approaches\n",
     "\n",
-    "Interestingly, there is [some discussion](https://en.wikipedia.org/wiki/Wikipedia:Requests_for_comment/Wikidata_Phase_2) about the pros & cons of inserting Wikidata values into Wikipedia articles. The main argument (by some) against is the immaturity of Wikidata's structure: therefore a concern about the permanence of references to data within its structure. But those for it, point out that early use & evolution might be the best path to a maturity. \n",
+    "Interestingly, there is [some discussion](https://en.wikipedia.org/wiki/Wikipedia:Requests_for_comment/Wikidata_Phase_2) about the pros & cons of inserting Wikidata values into Wikipedia articles. The main argument against is the immaturity of Wikidata's structure: therefore a concern about the durability of the references into its data structure. The counter point is that early use & evolution might be the best path to maturity.\n",
     "\n",
     "The case study for our Data Commons Scotland project, is _open data about waste in Scotland_. So a next step for the project might be to upload into Wikidata, datasets that describe the amounts of household waste generated & recycled, and 'carbon impact' figures. These could also be linked to [council areas](https://www.wikidata.org/wiki/Q15060255) - as we have done the population dataset - to support _per council area_/_per citizen_ statistics and visualisations. Appropriate [properties](https://www.wikidata.org/wiki/Q18616576) do not yet exist in Wikidata for the description of such data about waste, so new ones would need to be ratified by the Wikidata community.\n",
     "\n",
-    "Should should datasets actually be uploaded into Wikidata? These are small datasets and they seem to fit well enough into Wikidata's information graph. Uploading them into Wikidata may make them easier to access and help enrich Wikidata's information graph. But then, of course, there is the _keeping it up-to-date_ issue to deal with. \n",
-    "Alternatively, those datasets could be pulled directly from statistics.gov.scot, into Wikipedia  articles with the help of some new MediaWiki [extensions](https://www.mediawiki.org/wiki/Category:Extensions).\n",
+    "Should should datasets actually be uploaded into Wikidata?... These are small datasets and they seem to fit well enough into Wikidata's knowledge graph. Uploading them into Wikidata may make them easier to access, de-silo the data\n",
+    "and help enrich Wikidata's knowledge graph. But then, of course, there is the _keeping it up-to-date_ issue to solve. \n",
+    "Alternatively, those datasets could be pulled dynamically & directly from statistics.gov.scot, into Wikipedia  articles with the help of some new MediaWiki [extensions](https://www.mediawiki.org/wiki/Category:Extensions).\n",
     "\n",
     "\n",
     "\n",
