--- a/dataset-into-wikidata/dataset-CO2e-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-CO2e-into-wikidata.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "java.net.URLEncoder"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,6 +45,7 @@
     "\n",
     "(helper/add-dependencies '[org.clojure/data.csv \"1.0.0\"])\n",
     "(helper/add-dependencies '[clj-http/clj-http \"3.10.1\"])\n",
+    "(helper/add-dependencies '[metasoarous/oz \"1.6.0-alpha24\"])\n",
     "\n",
     "(require '[clojure.string :as str]\n",
     "         '[clojure.set :as set]\n",
@@ -52,7 +53,9 @@
     "         '[clojure.pprint :as pp]\n",
     "         '[clojure.java.io :as io]\n",
     "         '[clojure.data.csv :as csv]\n",
-    "         '[clj-http.client :as http])\n",
+    "         '[clj-http.client :as http]\n",
+    "         '[oz.notebook.clojupyter :as oz]\n",
+    "         '[oz.core :as ozcore])\n",
     "\n",
     "(import 'java.net.URLEncoder)"
    ]
@@ -394,7 +397,122 @@
    "source": [
     "\n",
     "When I ran the above CSV generation for the first time - the output is in [this file](CO2-quickstatements-2020-09-25T08_50Z.csv) - it specified 378 _individual_ edits to Wikidata (after I removed 6 of them that I had already manually edited into Wikidata). These were successfully executed (taking about 20 mins) against Wikidata by QuickStatements.\n",
-    "\n"
+    "\n",
+    "### Using the uploaded dataset\n",
+    "\n",
+    "As an example use, let's display a grouped bar chart to visualise...\n",
+    "\n",
+    ">_for household waste, the tonnes of CO2e generated per citizen per year per Scottish council area_.\n",
+    "\n",
+    "To do so...\n",
+    "* we run a SPARQL query against Wikidata \n",
+    "* that uses the CO2e dataset that we've just uploaded\n",
+    "* and uses the population dataset that we [previously](dataset-into-wikidata.ipynb) uploaded \n",
+    "* to perform the required calculation \n",
+    "* then, finally, we instruct Vega-Lite to render the chart. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[W 20:53:45.705 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access=27-Sep-2020;Path=/;HttpOnly;secure;Expires=Thu, 29 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Thu, 29 Oct 2020 12:00:00 GMT\n",
+      "[W 20:53:45.706 Clojupyter] org.apache.http.client.protocol.ResponseProcessCookies:130 -- Invalid cookie header: \"Set-Cookie: WMF-Last-Access-Global=27-Sep-2020;Path=/;Domain=.wikidata.org;HttpOnly;secure;Expires=Thu, 29 Oct 2020 12:00:00 GMT\". Invalid 'expires' attribute: Thu, 29 Oct 2020 12:00:00 GMT\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "  <div>\n",
+       "    <div id='uuid-ea383e53-e628-4c3d-acff-c814c4ea0cd6'></div>\n",
+       "    <script>\n",
+       "    requirejs.config({\n",
+       "      baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
+       "      paths: {\n",
+       "        'vega-embed':  'vega-embed@6.9.0?noext',\n",
+       "        'vega-lib': 'vega-lib?noext',\n",
+       "        'vega-lite': 'vega-lite@4.13.1?noext',\n",
+       "        'vega': 'vega@5.13.0?noext'\n",
+       "      }\n",
+       "    });\n",
+       "    require(['vega-embed'], function(vegaEmbed) {\n",
+       "      let spec = {\"data\":{\"values\":[{\"qid\":\"Q47134\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.38539861351819757366\",\"council\":\"Shetland Islands\"},{\"qid\":\"Q47134\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.35054371465854719443\",\"council\":\"Shetland Islands\"},{\"qid\":\"Q80967\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.43421150278293135436\",\"council\":\"Outer Hebrides\"},{\"qid\":\"Q100166\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.22248760703019378098\",\"council\":\"Orkney Islands\"},{\"qid\":\"Q100166\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.32145454545454545455\",\"council\":\"Orkney Islands\"},{\"qid\":\"Q80967\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.41248602310846067835\",\"council\":\"Outer Hebrides\"},{\"qid\":\"Q202174\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.38127753303964757709\",\"council\":\"Argyll and Bute\"},{\"qid\":\"Q202174\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.46296509618707522175\",\"council\":\"Argyll and Bute\"},{\"qid\":\"Q202177\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.99672342621259029928\",\"council\":\"Angus\"},{\"qid\":\"Q204940\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.8048866582096961006\",\"council\":\"West Lothian\"},{\"qid\":\"Q202177\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.96633919338159255429\",\"council\":\"Angus\"},{\"qid\":\"Q206934\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.00579154806218524195\",\"council\":\"Midlothian\"},{\"qid\":\"Q206934\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.09119769119769119769\",\"council\":\"Midlothian\"},{\"qid\":\"Q204940\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.8349017239486109586\",\"council\":\"West Lothian\"},{\"qid\":\"Q206926\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.01268134619633257235\",\"council\":\"North Ayrshire\"},{\"qid\":\"Q206926\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.04270402128917800118\",\"council\":\"North Ayrshire\"},{\"qid\":\"Q189912\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.17868971583738096149\",\"council\":\"Aberdeenshire\"},{\"qid\":\"Q201149\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.913839369739990858\",\"council\":\"Fife\"},{\"qid\":\"Q126514\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.47467158176943699732\",\"council\":\"Dumfries and Galloway\"},{\"qid\":\"Q126514\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.52564688487129511392\",\"council\":\"Dumfries and Galloway\"},{\"qid\":\"Q189912\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.24248281130634071811\",\"council\":\"Aberdeenshire\"},{\"qid\":\"Q201149\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.94036778762015023828\",\"council\":\"Fife\"},{\"qid\":\"Q207257\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.06923884013735215567\",\"council\":\"East Lothian\"},{\"qid\":\"Q207268\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.0422178988326848249\",\"council\":\"Clackmannanshire\"},{\"qid\":\"Q207111\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.04055500029396202011\",\"council\":\"North Lanarkshire\"},{\"qid\":\"Q207257\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.04627091407505435296\",\"council\":\"East Lothian\"},{\"qid\":\"Q207111\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.19642310860101188375\",\"council\":\"North Lanarkshire\"},{\"qid\":\"Q207679\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.93397088021178027796\",\"council\":\"Perth and Kinross\"},{\"qid\":\"Q208271\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.73644273832373640435\",\"council\":\"Inverclyde\"},{\"qid\":\"Q207679\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.92695485491440280256\",\"council\":\"Perth and Kinross\"},{\"qid\":\"Q207268\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.07576287657920310982\",\"council\":\"Clackmannanshire\"},{\"qid\":\"Q208121\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.17014842093516348622\",\"council\":\"West Dunbartonshire\"},{\"qid\":\"Q208121\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.15268708627846965107\",\"council\":\"West Dunbartonshire\"},{\"qid\":\"Q208279\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.34674789844612380063\",\"council\":\"Highland\"},{\"qid\":\"Q208271\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.72016251904520060945\",\"council\":\"Inverclyde\"},{\"qid\":\"Q209131\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.11894746183883564075\",\"council\":\"South Ayrshire\"},{\"qid\":\"Q208279\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.36575389063695892508\",\"council\":\"Highland\"},{\"qid\":\"Q209131\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.1085828520657485562\",\"council\":\"South Ayrshire\"},{\"qid\":\"Q2379199\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.95049373191899710704\",\"council\":\"City of Edinburgh\"},{\"qid\":\"Q2357511\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.99696134453781512605\",\"council\":\"Dundee City\"},{\"qid\":\"Q217838\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.93471854129121170359\",\"council\":\"Stirling\"},{\"qid\":\"Q2357511\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.03996368771434335283\",\"council\":\"Dundee City\"},{\"qid\":\"Q217838\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.90005319148936170213\",\"council\":\"Stirling\"},{\"qid\":\"Q62274582\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.87237651608367024082\",\"council\":\"Aberdeen City\"},{\"qid\":\"Q55934339\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.17167669737073162944\",\"council\":\"Glasgow City\"},{\"qid\":\"Q55934339\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.09508711474670703037\",\"council\":\"Glasgow City\"},{\"qid\":\"Q2379199\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.98897722180004286744\",\"council\":\"City of Edinburgh\"},{\"qid\":\"Q62274582\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.86791520979020979021\",\"council\":\"Aberdeen City\"},{\"qid\":\"Q216802\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.96640888112760384184\",\"council\":\"Falkirk\"},{\"qid\":\"Q216802\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.93592081433835009055\",\"council\":\"Falkirk\"},{\"qid\":\"Q211925\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.01282186576614605319\",\"council\":\"East Renfrewshire\"},{\"qid\":\"Q211889\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.02829317825163851195\",\"council\":\"East Dunbartonshire\"},{\"qid\":\"Q211925\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.93587264894399495639\",\"council\":\"East Renfrewshire\"},{\"qid\":\"Q211889\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.20922963099972255618\",\"council\":\"East Dunbartonshire\"},{\"qid\":\"Q211091\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.10578521744047955664\",\"council\":\"Renfrewshire\"},{\"qid\":\"Q211106\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.01832324076007517227\",\"council\":\"Moray\"},{\"qid\":\"Q209135\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.96918910045961917269\",\"council\":\"East Ayrshire\"},{\"qid\":\"Q209142\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.165480717855234623\",\"council\":\"South Lanarkshire\"},{\"qid\":\"Q211113\",\"year\":\"2017\",\"CO2ePerCitizen\":\"1.17081377151799687011\",\"council\":\"Scottish Borders\"},{\"qid\":\"Q211091\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.06589234490128803645\",\"council\":\"Renfrewshire\"},{\"qid\":\"Q211106\",\"year\":\"2018\",\"CO2ePerCitizen\":\"0.95960008375209380235\",\"council\":\"Moray\"},{\"qid\":\"Q209142\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.13233339602532756567\",\"council\":\"South Lanarkshire\"},{\"qid\":\"Q209135\",\"year\":\"2017\",\"CO2ePerCitizen\":\"0.98027718550106609808\",\"council\":\"East Ayrshire\"},{\"qid\":\"Q211113\",\"year\":\"2018\",\"CO2ePerCitizen\":\"1.16369393597640322721\",\"council\":\"Scottish Borders\"}]},\"mark\":{\"type\":\"bar\",\"tooltip\":{\"content\":\"data\"}},\"width\":20,\"encoding\":{\"column\":{\"field\":\"council\",\"type\":\"nominal\",\"spacing\":0,\"sort\":{\"field\":\"CO2ePerCitizen\",\"op\":\"mean\"},\"header\":{\"labelAngle\":-90,\"labelAlign\":\"right\",\"labelOrient\":\"bottom\",\"labelBaseline\":\"middle\"},\"axis\":{\"title\":null}},\"x\":{\"field\":\"year\",\"type\":\"ordinal\",\"axis\":{\"title\":null,\"labels\":false,\"ticks\":false}},\"y\":{\"field\":\"CO2ePerCitizen\",\"type\":\"quantitative\",\"axis\":{\"grid\":true,\"labelAngle\":-45,\"title\":\"CO2e tonnes\"},\"scale\":{\"zero\":false}},\"color\":{\"field\":\"year\"}}};\n",
+       "      vegaEmbed('#uuid-ea383e53-e628-4c3d-acff-c814c4ea0cd6', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "      }, function(err) {\n",
+       "      console.log('Failed to load');\n",
+       "    });\n",
+       "    </script>\n",
+       "  </div>\n",
+       "    "
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(def sparql \"\n",
+    "SELECT ?qid ?councilAreaLabel ?year ?CO2ePerCitizen\n",
+    "WHERE {\n",
+    "  ?councilArea wdt:P31 wd:Q15060255 . # Scottish council area\n",
+    "  BIND(strafter(str(?councilArea), 'http://www.wikidata.org/entity/') as ?qid)\n",
+    "  ?councilArea p:P5991 ?CO2e ;\n",
+    "               p:P1082 ?population. \n",
+    "  ?CO2e psv:P5991 ?CO2eQuantity ;\n",
+    "        pq:P585 ?date ;\n",
+    "        pq:P828 wd:Q180388 ; # 'has cause' 'waste management'\n",
+    "        pq:P828 wd:Q259059 . # 'has cause' 'household'\n",
+    "  ?population psv:P1082 ?populationQuantity ;\n",
+    "              pq:P585 ?date .\n",
+    "  ?CO2eQuantity wikibase:quantityAmount ?CO2eAmount.\n",
+    "  ?populationQuantity wikibase:quantityAmount ?populationAmount .\n",
+    "  BIND(YEAR(?date) as ?year)\n",
+    "  BIND((xsd:integer(?CO2eAmount)/xsd:integer(?populationAmount)) AS ?CO2ePerCitizen)\n",
+    "  SERVICE wikibase:label { bd:serviceParam wikibase:language '[AUTO_LANGUAGE],en' . }\n",
+    "}\")\n",
+    "\n",
+    "(def wikidata\n",
+    "    (->> sparql\n",
+    "        (exec-query :wikidata)\n",
+    "        (map #(set/rename-keys % {:councilAreaLabel :council}))))\n",
+    "\n",
+    "(def chart-spec\n",
+    "  {:data {:values wikidata}\n",
+    "   :mark {:type \"bar\" \n",
+    "          :tooltip {:content \"data\"}}\n",
+    "   :width 20\n",
+    "   :encoding {:column {:field \"council\"\n",
+    "                       :type \"nominal\"\n",
+    "                       :spacing 0\n",
+    "                       :sort {:field \"CO2ePerCitizen\" :op \"mean\"}\n",
+    "                       :header{:labelAngle -90\n",
+    "                               :labelAlign \"right\"\n",
+    "                               :labelOrient \"bottom\"\n",
+    "                               :labelBaseline \"middle\"}\n",
+    "                       :axis {:title nil}}\n",
+    "              :x {:field \"year\"\n",
+    "                  :type \"ordinal\"\n",
+    "                  :axis {:title nil\n",
+    "                         :labels false\n",
+    "                         :ticks false}}\n",
+    "              :y {:field \"CO2ePerCitizen\"\n",
+    "                  :type \"quantitative\"\n",
+    "                  :axis {:grid true\n",
+    "                         :labelAngle -45\n",
+    "                         :title \"CO2e tonnes\"}\n",
+    "                  :scale {:zero false}}\n",
+    "              :color {:field \"year\"}}})\n",
+    "\n",
+    "(oz/view! chart-spec)"
    ]
   },
   {
