--- a/dataset-into-wikidata/dataset-CO2e-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-CO2e-into-wikidata.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "### The dataset that is to be uploaded\n",
     "\n",
-    "The [Scottish Environment Protection Agency](https://www.sepa.org.uk) (SEPA) has published CO2e data for household waste in Scotlan to indicate the [global warming potential](https://en.wikipedia.org/wiki/Global_warming_potential) of this waste. The data shows the tonnes of CO2e per Scottish council area per year (only 2017 and 2018, at present). \n",
+    "The [Scottish Environment Protection Agency](https://www.sepa.org.uk) (SEPA) has published CO2e data for household waste in Scotland to indicate the [global warming potential](https://en.wikipedia.org/wiki/Global_warming_potential) of this waste. The data shows the tonnes of CO2e per Scottish council area per year (only 2017 and 2018, at present). \n",
     "\n",
     "The data is found in the two Excel spreadsheets \n",
     "[2017-household-waste-tables](https://www.sepa.org.uk/media/378875/2017-household-waste-summary-tables-final.xlsx) and\n",
