--- a/pivot-drilldown-and-plot/prep-data.ipynb
+++ b/pivot-drilldown-and-plot/prep-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "org.apache.commons.math3.stat.regression.SimpleRegression"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,6 +27,7 @@
     "(helper/add-dependencies '[org.apache.commons/commons-math3 \"3.6.1\"])\n",
     "\n",
     "(require '[clojure.string :as str]\n",
+    "         '[clojure.set :as set]\n",
     "         '[clojure.pprint :as pp]\n",
     "         '[clojure.java.io :as io]\n",
     "         '[clojure.data.csv :as csv]\n",
@@ -65,10 +66,14 @@
     "                    repeat)\n",
     "                (rest csv-data)))\n",
     "\n",
+    "; Map the name of a SPARQL service to its URL.\n",
+    "(def service-urls {:scotgov \"http://statistics.gov.scot/sparql\"\n",
+    "                   :wikidata \"https://query.wikidata.org/sparql\"})\n",
+    "\n",
     "; Ask statistic.gov.scot to execute the given SPARQL query\n",
     "; and return its result as a list-of-maps.\n",
-    "(defn exec-query [sparql]\n",
-    "    (->> (http/post \"http://statistics.gov.scot/sparql\" \n",
+    "(defn exec-query [service-name sparql]\n",
+    "    (->> (http/post (service-name service-urls) \n",
     "                    {:body (str \"query=\" (URLEncoder/encode sparql)) \n",
     "                    :headers {\"Accept\" \"text/csv\" \n",
     "                              \"Content-Type\" \"application/x-www-form-urlencoded\"} \n",
@@ -88,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +109,7 @@
        "nil"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,6 +132,7 @@
     "    ?endState\n",
     "    ?material\n",
     "    ?tonnes \n",
+    "    \n",
     "WHERE {\n",
     "  \n",
     "    ?tonnageObs qb:dataSet <http://statistics.gov.scot/data/household-waste> .\n",
@@ -145,7 +151,7 @@
     "\n",
     "(def household-waste-solids \n",
     "    (->> sparql\n",
-    "        exec-query\n",
+    "        (exec-query :scotgov)\n",
     "        (map #(assoc % :year (.intValue (bigdec (:year %)))\n",
     "                       :tonnes (.doubleValue (bigdec (:tonnes %)))))))\n",
     "\n",
@@ -154,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,18 +168,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "| :year |               :area |                         :endState |                                      :material | :tonnes |\n",
-      "|-------+---------------------+-----------------------------------+------------------------------------------------+---------|\n",
-      "|  2012 |               Moray |                   Other Diversion |                                          Soils |     0.0 |\n",
-      "|  2017 | West Dunbartonshire | Other Diversion (pre 2014 method) |                       Metallic wastes, ferrous |     0.0 |\n",
-      "|  2016 |   South Lanarkshire |                   Waste Generated |                    Animal and mixed food waste |  3153.0 |\n",
-      "|  2015 |    Shetland Islands |                   Other Diversion |                                   Glass wastes |     0.0 |\n",
-      "|  2017 |     Argyll and Bute |                   Other Diversion |              Health care and biological wastes |     0.0 |\n",
-      "|  2014 |   North Lanarkshire |                        Landfilled | Mineral waste from construction and demolition |     0.0 |\n",
-      "|  2012 |   North Lanarkshire | Other Diversion (pre 2014 method) |                                  Rubber wastes |     0.0 |\n",
-      "|  2012 |      Orkney Islands |                   Other Diversion |                                 Textile wastes |     0.0 |\n",
-      "|  2015 |   South Lanarkshire |                   Other Diversion |                                Chemical wastes |     0.0 |\n",
-      "|  2018 |        Glasgow City |                        Landfilled |                                   Glass wastes |     0.0 |\n"
+      "| :year |                 :area |                         :endState |                                                                             :material | :tonnes |\n",
+      "|-------+-----------------------+-----------------------------------+---------------------------------------------------------------------------------------+---------|\n",
+      "|  2015 |         East Ayrshire | Other Diversion (pre 2014 method) |                                                           Animal and mixed food waste |     0.0 |\n",
+      "|  2017 |     Perth and Kinross |                        Landfilled |                                                                          Glass wastes |     0.0 |\n",
+      "|  2018 |            Inverclyde | Other Diversion (pre 2014 method) |                                                              Metallic wastes, ferrous |     0.0 |\n",
+      "|  2013 |         East Ayrshire |        Recycled (pre 2014 method) |                                                     Health care and biological wastes |     0.0 |\n",
+      "|  2012 |              Highland |                          Recycled |                                                                                 Soils |     0.0 |\n",
+      "|  2013 | Dumfries and Galloway |                        Landfilled |                                                                             Used oils |     0.0 |\n",
+      "|  2015 |                  Fife | Other Diversion (pre 2014 method) | Discarded equipment (excluding discarded vehicles, batteries and accumulators wastes) |     0.0 |\n",
+      "|  2011 |          West Lothian |                   Other Diversion |                                                     Health care and biological wastes |     0.0 |\n",
+      "|  2011 |      Scottish Borders |                          Recycled |                                                                        Textile wastes |   175.0 |\n",
+      "|  2017 |      Scottish Borders |                   Waste Generated |                                                          Metallic wastes, non-ferrous |     0.0 |\n"
      ]
     },
     {
@@ -182,7 +188,7 @@
        "nil"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -214,7 +220,7 @@
        "nil"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +265,7 @@
     "\n",
     "(def population\n",
     "    (->> sparql\n",
-    "        exec-query\n",
+    "        (exec-query :scotgov)\n",
     "        (map #(assoc % :year (.intValue (bigdec (:year %)))\n",
     "                       :population (.intValue (bigdec (:population %)))))))\n",
     "\n",
@@ -268,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,18 +282,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "| :year |              :area | :population |\n",
-      "|-------+--------------------+-------------|\n",
-      "|  2003 |   Clackmannanshire |       48140 |\n",
-      "|  2004 |     North Ayrshire |      136500 |\n",
-      "|  2012 |   Shetland Islands |       23210 |\n",
-      "|  2011 |    Argyll and Bute |       88930 |\n",
-      "|  2017 |     Orkney Islands |       22000 |\n",
-      "|  2001 | Na h-Eileanan Siar |       26450 |\n",
-      "|  2019 |    Argyll and Bute |       85870 |\n",
-      "|  2003 |     South Ayrshire |      111550 |\n",
-      "|  2001 |              Angus |      108370 |\n",
-      "|  2011 |   Scottish Borders |      113880 |\n"
+      "| :year |               :area | :population |\n",
+      "|-------+---------------------+-------------|\n",
+      "|  2015 |       Aberdeenshire |      261960 |\n",
+      "|  2005 |       Aberdeenshire |      237570 |\n",
+      "|  2007 | West Dunbartonshire |       91370 |\n",
+      "|  2017 |             Falkirk |      160130 |\n",
+      "|  2013 |        Glasgow City |      596520 |\n",
+      "|  2015 |   East Renfrewshire |       92940 |\n",
+      "|  2003 |            Scotland |     5068500 |\n",
+      "|  2005 |               Moray |       90100 |\n",
+      "|  2007 |               Moray |       91440 |\n",
+      "|  2017 |                Fife |      371410 |\n"
      ]
     },
     {
@@ -296,7 +302,7 @@
        "nil"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +332,7 @@
        "nil"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +375,7 @@
     "\n",
     "(def household\n",
     "    (->> sparql\n",
-    "        exec-query\n",
+    "        (exec-query :scotgov)\n",
     "        (map #(assoc % :year (.intValue (bigdec (:year %)))\n",
     "                       :count (.intValue (bigdec (:count %)))))))\n",
     "\n",
@@ -378,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -386,18 +392,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "| :year |               :area | :count |\n",
-      "|-------+---------------------+--------|\n",
-      "|  2004 |   East Renfrewshire |  35764 |\n",
-      "|  2018 | East Dunbartonshire |  46023 |\n",
-      "|  2014 |   East Renfrewshire |  38048 |\n",
-      "|  2006 |  Na h-Eileanan Siar |  11779 |\n",
-      "|  2016 |      North Ayrshire |  63440 |\n",
-      "|  2008 |   Perth and Kinross |  64284 |\n",
-      "|  2001 |            Highland |  89618 |\n",
-      "|  2011 |   Perth and Kinross |  64905 |\n",
-      "|  2009 |        East Lothian |  42211 |\n",
-      "|  2015 |    Shetland Islands |  10235 |\n"
+      "| :year |             :area | :count |\n",
+      "|-------+-------------------+--------|\n",
+      "|  2013 |             Angus |  52413 |\n",
+      "|  2007 |     East Ayrshire |  52425 |\n",
+      "|  2001 |       Dundee City |  66854 |\n",
+      "|  2017 |        Inverclyde |  37651 |\n",
+      "|  2005 |      Renfrewshire |  77483 |\n",
+      "|  2002 |   Argyll and Bute |  39135 |\n",
+      "|  2012 | North Lanarkshire | 146905 |\n",
+      "|  2008 |       Dundee City |  68594 |\n",
+      "|  2017 |    South Ayrshire |  52104 |\n",
+      "|  2008 |          Stirling |  37120 |\n"
      ]
     },
     {
@@ -406,7 +412,7 @@
        "nil"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,14 +426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17424 rows\n"
+      "64 rows\n"
      ]
     },
     {
@@ -436,7 +442,135 @@
        "nil"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; Query for the CO2e data\n",
+    "\n",
+    "(def sparql \"\n",
+    "\n",
+    "SELECT \n",
+    "    ?year \n",
+    "    ?councilAreaLabel \n",
+    "    ?CO2eAmount\n",
+    "    \n",
+    "WHERE {\n",
+    "  ?councilArea wdt:P31 wd:Q15060255 . # Scottish council area\n",
+    "    \n",
+    "  BIND(strafter(str(?councilArea), 'http://www.wikidata.org/entity/') as ?qid)\n",
+    "    \n",
+    "  ?councilArea p:P5991 ?CO2e . \n",
+    "  ?CO2e psv:P5991 ?CO2eQuantity ;\n",
+    "        pq:P585 ?date ;\n",
+    "        pq:P828 wd:Q180388 ; # 'has cause' 'waste management'\n",
+    "        pq:P828 wd:Q259059 . # 'has cause' 'household' .\n",
+    "  ?CO2eQuantity wikibase:quantityAmount ?CO2eAmount.\n",
+    "    \n",
+    "  BIND(YEAR(?date) as ?year)\n",
+    "    \n",
+    "  SERVICE wikibase:label { bd:serviceParam wikibase:language '[AUTO_LANGUAGE],en' . }\n",
+    "}\n",
+    "\")\n",
+    "\n",
+    "(def co2e\n",
+    "    (->> sparql\n",
+    "        (exec-query :wikidata)\n",
+    "        (map #(set/rename-keys % {:councilAreaLabel :area\n",
+    "                                  :CO2eAmount :co2e}))\n",
+    "        (map #(assoc % :year (.intValue (bigdec (:year %)))\n",
+    "                       :co2e (.doubleValue (bigdec (:co2e %)))))\n",
+    "        (map #(let [area (:area %)] ;; adjust Wikidata values to be in keeping with those from Scottish gov\n",
+    "                  (cond \n",
+    "                    (= area \"Outer Hebrides\") (assoc % :area \"Na h-Eileanan Siar\")\n",
+    "                    :else %)))\n",
+    "        \n",
+    "        ))\n",
+    "\n",
+    "(println (count co2e ) \"rows\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "| :year |                 :area |     :co2e |\n",
+      "|-------+-----------------------+-----------|\n",
+      "|  2017 |                 Angus | 115899.85 |\n",
+      "|  2017 |         Aberdeenshire | 325282.92 |\n",
+      "|  2017 |   East Dunbartonshire | 130754.58 |\n",
+      "|  2017 |         Aberdeen City | 198579.67 |\n",
+      "|  2017 |           Dundee City | 154653.39 |\n",
+      "|  2017 |                 Angus | 115899.85 |\n",
+      "|  2018 | Dumfries and Galloway | 227001.47 |\n",
+      "|  2017 |   East Dunbartonshire | 130754.58 |\n",
+      "|  2017 |        Orkney Islands |  29072.83 |\n",
+      "|  2018 |      Shetland Islands |  31049.37 |\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nil"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "; Print a sample\n",
+    "\n",
+    "(def ks [:year :area :co2e])\n",
+    "(pp/print-table ks (repeatedly 10 #(rand-nth co2e)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({:area \"Scotland\", :year 2017, :co2e 5863248.86} {:area \"Scotland\", :year 2018, :co2e 5759986.49})"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17490 rows\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nil"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,36 +584,53 @@
     "(def household-indexed \n",
     "    (group-by (juxt :year :area) household))\n",
     "\n",
+    "\n",
+    "    \n",
+    "\n",
     "(def target-data-struct\n",
-    "    (->> household-waste-solids\n",
-    "        (filter #(not (or ;; could be useful, so leave in but hide on the page\n",
-    "                          ;; (= \"Scotland\" (:area %))\n",
-    "                          ;; duplicated by & could clash with summing on the page, so remove\n",
-    "                          (= \"Waste Generated\" (:endState %))\n",
-    "                          (= \"Total Waste\" (:material %))\n",
-    "                          ;; confusingly duplicated in the non pre 2014 data, so remove\n",
-    "                          (= \"Other Diversion (pre 2014 method)\" (:endState %)) ;; remove\n",
-    "                          (= \"Recycled (pre 2014 method)\" (:endState %)))))\n",
-    "        (map #(if-let [population (-> population-indexed (get [(:year %) (:area %)]) first :population)]\n",
-    "                (assoc % :tonnesPerCitizen (/ (:tonnes %) population))\n",
-    "                %))\n",
-    "        (map #(if-let [count (-> household-indexed (get [(:year %) (:area %)]) first :count)]\n",
-    "                (assoc % :tonnesPerHousehold (/ (:tonnes %) count))\n",
-    "                %))))\n",
+    "    (concat\n",
+    "        (->> household-waste-solids\n",
+    "            (filter #(not (or ;; could be useful, so leave in but hide on the page\n",
+    "                              ;; (= \"Scotland\" (:area %))\n",
+    "                              ;; duplicated by & could clash with summing on the page, so remove\n",
+    "                              (= \"Waste Generated\" (:endState %))\n",
+    "                              (= \"Total Waste\" (:material %))\n",
+    "                              ;; confusingly duplicated in the non pre 2014 data, so remove\n",
+    "                              (= \"Other Diversion (pre 2014 method)\" (:endState %)) ;; remove\n",
+    "                              (= \"Recycled (pre 2014 method)\" (:endState %)))))\n",
+    "            (map #(if-let [population (-> population-indexed (get [(:year %) (:area %)]) first :population)]\n",
+    "                    (assoc % :tonnesPerCitizen (/ (:tonnes %) population))\n",
+    "                    %))\n",
+    "            (map #(if-let [count (-> household-indexed (get [(:year %) (:area %)]) first :count)]\n",
+    "                    (assoc % :tonnesPerHousehold (/ (:tonnes %) count))\n",
+    "                    %)))\n",
+    "         (->> co2e\n",
+    "            (concat ;; the entries for Scotland as a whole\n",
+    "                (let [per-year (group-by :year co2e)]\n",
+    "                    (for [year (keys per-year)]\n",
+    "                        {:area \"Scotland\"\n",
+    "                         :year year\n",
+    "                         :co2e (apply + (map :co2e (get per-year year)))})))\n",
+    "            (map #(if-let [population (-> population-indexed (get [(:year %) (:area %)]) first :population)]\n",
+    "                    (assoc % :co2ePerCitizen (/ (:co2e %) population))\n",
+    "                    %))\n",
+    "            (map #(if-let [count (-> household-indexed (get [(:year %) (:area %)]) first :count)]\n",
+    "                    (assoc % :co2ePerHousehold (/ (:co2e %) count))\n",
+    "                    %)))))\n",
     "         \n",
     "(println (count target-data-struct) \"rows\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wrote the JSON file /Users/amc/workspace/data-commons-scotland/dcs-shorts/pivot-and-drill/dx/dx-data.json\n"
+      "wrote the JSON file /Users/amc/workspace/data-commons-scotland/dcs-shorts/pivot-drilldown-and-plot/dx-data.json\n"
      ]
     },
     {
@@ -488,7 +639,7 @@
        "nil"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
