--- a/pivot-drilldown-and-plot/README.adoc
+++ b/pivot-drilldown-and-plot/README.adoc
@@ -50,12 +50,13 @@ The graph can be zoomed/unzoomed, and its current contents can be printed or sav
 
 image::screenshot-graph-saving.png[align="center"]
 
-The data grid's expand/collapse arrow icons allow the user to _drilldown_ into slices of data.
+The data grid's expand/collapse arrow-head icons allow the user to _drilldown_ into slices of data.
+Below, we've expanded the `Stirling` -> `Recycled` slice to reveal the data values `per-material`.
 
 image::screenshot-drilldown.png[align="center"]
 
 The data grid's "Show Filed Chooser" icon pops up a control panel to allow the user
-to select data dimensions, value ranges, value filters, display order, etc., etc.
+to select data dimensions, axis assignments, value ranges, value filters, display order, etc., etc.
 
 image::screenshot-field-chooser-icon.png[50,50,align="center"]
 
@@ -65,26 +66,40 @@ The data grid's "Export to Excel file" icon will export the grid's currently sel
 
 image::screenshot-grid-excel-icon.png[50,50,align="center"]
 
-The resulting Excel files are nice because the export function preserves fixed headers and some other formatting.
+The resulting Excel files are nice because the export functionality
+preserves user-friendly fixed headers and some other formatting.
 
-image::screenshot-grid-excel-example.png[600,600,align="center"]
+image::screenshot-grid-excel-example.png[650,650,align="center"]
 
-The prototype operates okay-ish on phones and tablets.
+Finally, the prototype operates well on phones and tablets (although there is
+a sizing issue with pop-up panels that I haven't investigated).
 
 image::screenshot-iphone.png[200,250,align="center"]
 
 image::screenshot-ipad.png[400,600,align="center"]
 
-=== Is it useful?
+=== But, is it useful?
 
-answering questions through presets
-    e.g. compare
-        data dices, e.g. AberdeenCity vs Dundee
-        datastes, e.g. solids vs. CO2e
+So, might (a production-class version of) such a tool,
+help our users to explore and understand open data about waste?
+Well, we won't know until we have user tested it, but my guess is that:
 
-Would a real version of this be useful for our project?
-Maybe not directly for our layman users but perhaps for our users with medium experience of data
+a. users with no data analysis experience
+will find its configurability difficult to navigate.
+a. users with low-to-medium data analysis experience
+may find it a useful as a single tool containing multiple datasets.
+a. users with medium-to-high data analysis experience
+will prefer to use their own tools.
 
+A _presets_ feature has been added to the tool
+so that users can go to a particular configuration & data selection
+by simply clicking on a hyperlink.
+This supports an _easy-access_ route to the tool for _a_-users,
+by answering their potential questions through presets such as:
 
+. https://data-commons-scotland.github.io/pivot-drilldown-and-plot/index.html?preset1[How does Aberdeen City compare with Dundee (and Scotland as a whole) for the amounts of household waste per citizen that it landfills?]
+. https://data-commons-scotland.github.io/pivot-drilldown-and-plot/index.html?preset2[How many tonnes of each household waste material ended up recycled, landfilled, etc. in Stirling in 2018?]
+. https://data-commons-scotland.github.io/pivot-drilldown-and-plot/index.html?preset3[What proportion of a tonne of household waste has ended up recycled, landfilled, etc. in Edinburgh through the years?]
+. https://data-commons-scotland.github.io/pivot-drilldown-and-plot/index.html?preset4[What does the correlation look like between the amounts of household waste solids and their calculated carbon impacts?]
 
 
